# python_playwright_autotests

./: index.html  pyproject.toml
.github/workflows/: python_playwright_autotests.yaml
1/: index.html
1/data/: behaviors.json  packages.json  suites.csv  suites.json  timeline.json
1/export/: influxDbData.txt  prometheusData.txt
1/history/: history.json
1/widgets/: categories-trend.json  duration-trend.json  duration.json  executors.json  history-trend.json  retry-trend.json  severity.json  summary.json
10/: index.html
10/data/: behaviors.json  packages.json  suites.csv  suites.json  timeline.json
10/export/: influxDbData.txt  prometheusData.txt
10/history/: categories-trend.json  duration-trend.json  history.json  retry-trend.json
10/widgets/: executors.json  history-trend.json  severity.json  summary.json
11/: index.html
11/data/: behaviors.json  packages.json  suites.csv  suites.json  timeline.json
11/export/: influxDbData.txt  prometheusData.txt
11/history/: categories-trend.json  history-trend.json  history.json
11/widgets/: duration-trend.json  executors.json  retry-trend.json  severity.json  status-chart.json  summary.json
12/: index.html
12/data/: behaviors.json  packages.json  suites.csv  suites.json  (+1 more)
2/: index.html
3/: index.html
4/: index.html
5/: index.html
6/: index.html
7/: index.html
8/: index.html
9/: index.html
last-history/: history-trend.json  history.json  retry-trend.json
pages/: base_page.py  basket_page.py  login_page.py  main_page.py  product_page.py
tests/: conftest.py  test_product_page.py
(+328 files in other folders)
